# CircuitTesterTests

./: .gitignore  README.md  layout.py  layout.ui  main.py
BackendPy/: test1.cir
BackendTest/: CMakeLists.txt
BackendTest/doc_doxygen/html/: Component_8h_source.html  PowerData_8h_source.html  Resistor_8h_source.html  annotated.html  classComponent-members.html  classComponent.html  classResistor-members.html  classResistor.html  classes.html  components_8h_source.html  dir_3c4c7c1a85608ccd561c026bec818e51.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  structPowerData-members.html  structPowerData.html
BackendTest/doc_doxygen/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  classes_0.js  classes_1.js  classes_2.js  functions_0.js  functions_1.js  functions_2.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
BackendTest/docs/: Doxyfile.in
BackendTest/src/: main.cpp
BackendTest/src/components/: Component.h  PowerData.h  Resistor.cpp  Resistor.h  components.h
BinaryTree1/: Arrow.py  Component.py  main.py
CSD/: CMakeLists.txt  customtitlebar.cpp  customtitlebar.h  customwindow.cpp  customwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  refresh_css.sh
CSD/css/: custom_titlebar.css  custom_titlebar_css.h  custom_toolbar.css  custom_toolbar_css.h  custom_window.css  custom_window_css.h
DiagramEditor/: CMakeLists.txt  arrow.cpp  mainwindow.cpp  mainwindow.h
Graph1/: Component.py  main.py  visualisation.xcf
Graph2/: Arrow.h  Component.h  Makefile  graph2  main.cpp
LayoutTest1/: .gitignore  Arrow.cpp  Arrow.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  Scene.cpp  Scene.h  SceneItem.cpp  SceneItem.h  SceneText.cpp  SceneText.h  layouttest1.qrc  main.cpp  movedeps.py  resources.qrc
LayoutTest1/Components/: Battery.cpp  Battery.h  Component.cpp  Component.h  Resistor.cpp  Resistor.h
LayoutTest1/linbuild/: CMakeCache.txt  LayoutTest1  Makefile  cmake_install.cmake
LayoutTest1/linbuild/LayoutTest1_autogen/: moc_predefs.h
LayoutTest1/linbuild/LayoutTest1_autogen/EWIEGA46WW/: moc_MainWindow.cpp.d  moc_Scene.cpp.d  moc_SceneText.cpp.d  qrc_layouttest1.cpp
LayoutTest1/res/: convert.pl  resistor.txt
LayoutTest1/src/: Component.cpp  Component.h  GraphicsScene.cpp  GraphicsScene.h  arrow.cpp  arrow.h  main.cpp  mainwindow.cpp  mainwindow.h
LayoutTest1/src/Components/: Resistor.cpp  Resistor.h
LayoutTest1/winbuild/: CMakeCache.txt  Makefile  cmake_install.cmake
LayoutTest1/winbuild/LayoutTest1_autogen/: moc_predefs.h
LayoutTest1/winbuild/LayoutTest1_autogen/EWIEGA46WW/: moc_MainWindow.cpp  moc_Scene.cpp  moc_SceneText.cpp  qrc_layouttest1.cpp
QmlTest/: CMakeLists.txt  graphicsscene.cpp  graphicsscene.h  graphicsview.cpp  graphicsview.h  main.cpp  widgetitem.cpp  widgetitem.h
spice/: CMakeLists.txt  Component.cpp  Component.h  Components.h  NodeHashTable.cpp  NodeHashTable.h  Sim.cpp  Sim.h  Spice.cpp  Spice.h  example.cir  main.cpp
spice/Components/: Resistor.cpp  Resistor.h
spice2/: CMakeLists.txt  Component.cpp  Component.h  Equation.cpp  Equation.h  MNACircuit.cpp  MNACircuit.h  MNAElement.cpp  MNAElement.h  MNASolution.cpp  MNASolution.h  main.cpp
spice3/: Battery.py  Current_Source.py  Element.py  Equation.py  MNACircuit.py  MNAElement.py  MNASolution.py  Resistor.py  Switch.py  Unknowns.py  main.py
